--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 name = "sdbootutil"
 version = "0.1.0"
 edition = "2021"
-author = "Tobias Görgens"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.3", features = ["derive"] }
+
+[dev-dependencies]
+mockall = "0.12.1"
