--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,14 @@
 name = "sdbootutil"
 version = "0.1.0"
 edition = "2021"
+author = "Tobias Görgens"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
+crossterm = "0.27.0"
+ratatui = "0.26.1"
 
 [dev-dependencies]
 mockall = "0.12.1"
