--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ author = ["Tobias Görgens <tobi.goergens@gmail.com>"]
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
-cursive = { default-features = false, features = ["crossterm-backend"] }
+cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
 tempfile = "3.10.1"
 
 [dev-dependencies]
