--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ author = ["Tobias Görgens <tobi.goergens@gmail.com>"]
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
-cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
+cursive = { git = "https://github.com/gyscos/cursive.git", default-features = false, features = ["crossterm-backend"] }
 elevate = "0.6.1"
 libbtrfs = "0.0.12"
 regex = "1.10.4"
